--- a/toast_manager.css
+++ b/toast_manager.css
@@ -120,10 +120,11 @@
         z-index: var(--tm-z-remove);
     }
 
-    @media (pointer: coarse) {
+    @media (pointer: coarse) or (width < 400px) {
         bottom: 16px;
         top: unset;
-        width: calc(100% - 32px);
+        width: 100%;
+        inset-inline: 16px;
         animation: showToastMobile 500ms cubic-bezier(0.19, 1, 0.22, 1);
 
         &:nth-of-type(2) {
