--- a/toast_manager.css
+++ b/toast_manager.css
@@ -124,6 +124,7 @@
         bottom: 16px;
         top: unset;
         width: 100%;
+        max-width: unset;
         inset-inline: 16px;
         animation: showToastMobile 500ms cubic-bezier(0.19, 1, 0.22, 1);
 
