--- a/style-page.css
+++ b/style-page.css
@@ -35,6 +35,10 @@ header {
       gap: .5rem;
       min-width: min(100%, 30ch);
 
+      @media (width < 400px) {
+         width: 100%;
+      }
+
       input {
          border: 1px solid hsl(0, 0%, 92%);
          padding: .75rem 1.2rem;
