--- a/toast_manager.css
+++ b/toast_manager.css
@@ -123,7 +123,7 @@
     @media (pointer: coarse) or (width < 400px) {
         bottom: 16px;
         top: unset;
-        width: 100%;
+        /* width: calc(100% - 32px); */
         max-width: unset;
         inset-inline: 16px;
         animation: showToastMobile 500ms cubic-bezier(0.19, 1, 0.22, 1);
