--- a/style-page.css
+++ b/style-page.css
@@ -291,40 +291,17 @@ section {
    }
 }
 
-.toast-code {
-   background: hsl(0, 0%, 15%);
-   color: hsl(0, 0%, 90%);
-   border: 1px solid hsl(0, 0%, 10%);
+footer {
+   display: flex;
+   gap: .5em 2rem;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   padding-inline: 4rem;
+   background: hsl(220, 80%, 95%);
+   color: hsl(220, 80%, 20%);
 
-   &,
-   & * {
-      font-family: "Geist Mono", monospace;
-   }
-
-   padding: 1.5rem;
-   border-radius: 1em;
-
-   & .hljs-keyword {
-      color: hsl(250, 50%, 80%);
-   }
-
-   & .hljs-title {
-      color: hsl(50, 60%, 70%);
-   }
-
-   & .hljs-title.class_ {
-      color: hsl(160, 75%, 45%);
-   }
-
-   & .hljs-string {
-      color: hsl(20, 70%, 60%);
-   }
-
-   & .hljs-attr {
-      color: hsl(200, 50%, 80%);
-   }
-
-   & .hljs-number {
-      color: hsl(150, 50%, 80%);
+   a {
+      color: hsl(220, 80%, 45%);
+      font-weight: 600;
    }
 }
